# Algorithms

./: README.md  pit_craft.py  pyproject.toml  rsq.py  sort_counter.py
algs_and_ds/: README.md
algs_and_ds/b_division/: 111.py  boring_lecture.py  calc.py  good_row.py  min_rectangle.py  os_lite.py  sum_rectangle.py  train_lite.py
algs_and_ds/binary_search/: README.md
algs_and_ds/heap/: heap_sort.py
algs_and_ds/linked_list/: README.md
algs_and_ds/sorting/: README.md  quick_sort.py
b_division/: beauti_row.py  deque.py  diego.py  drunkard_game.py  histogram.py  kyz.py  plane.py  queue.py  realocation.py  sntp.py  stack.py  test_work.py
backend/: README.md
backend/examples/app_architecture/: README.md
backend/examples/databases/: README.md
backend/examples/profiling/: README.md
bfs/: main.py  pyproject.toml
bfs/bfs/: main.py
bfs/tests/: test_.py
binary_search/: README.md  main.py  pyproject.toml
binary_search/binary_search/: test.py
binary_search/tests/: test_.py
dfs/: pyproject.toml
dfs/dfs/: main.py
dfs/tests/: test_.py
dynamic_programming/: main.py  pyproject.toml
heap/: README.md  heap.py  heap_class.py
infix&postfix/: README.md  main.py
linked_list/: README.md  pyproject.toml
linked_list/linked_list/: main.py
misc/: compare_2num.py  rle.py
python/: README.md
queue/: README.md  circular.py
quick_sort/: pyproject.toml
quick_sort/tests/: test_quick_sort.py
sets/: pyproject.toml
sets/sets/: main.py
sorting/: README.md  test_quick_sort.py
stack/: README.md  infix_to_postfix.py  main.py  rec.py  search.py
