[tool.poetry]
name = "algorithms"
version = "0.1.0"
description = "repo for learning algorithms"
authors = ["Flict-dev <zhdanom.maksi@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.2.0"
binary_search = {path = './binary_search'}
linked_ist = {path = './linked_ist'}
quick_sort = {path = './quick_sort'}
bfs = {path = './bfs'}

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
