[tool.poetry]
name = "dynamic-programming"
version = "0.1.0"
description = ""
authors = ["Flict-dev <zhdanom.maksi@gmail.com>"]
readme = "README.md"
packages = [{include = "dynamic_programming"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
