[tool.poetry]
name = "linked-list"
version = "0.1.0"
description = ""
authors = ["Flict-dev <zhdanom.maksi@gmail.com>"]
readme = "README.md"
packages = [{include = "linked_list"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
